syntax = "proto3";
package util.version;

message SemVer {
  uint64 major = 1;
  uint64 minor = 2;
  uint64 patch = 3;
  string prerelease = 4;
  string build = 5;
}

message CliBuildInformation {
  SemVer cli_build_version = 1;
  SemVer cli_minimal_version = 2;
}
